# groupweave

./: .gemini  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README shade agent.md  README.md  UI_COMPONENTS.md  docker-compose.yaml  docs.json  generate_docs.py  package.json  pnpm-lock.yaml  turbo-repo-README.md
.github/: copilot-instructions.md
.github/workflows/: near-rewards.yml
agents/shade/: README.md
agents/shade/curation-agent/: .dockerignore  .env.development.local.example  Dockerfile  README.md  docker-compose.yaml  requirements.txt
agents/shade/curation-agent/data/: README.md
agents/shade/curation-agent/data/community-test/: guidelines.md
agents/shade/curation-agent/scripts/: deploy.sh
agents/shade/curation-agent/src/: main.py  search_server.py
agents/shade/vlm-classifier-agent/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  requirements.txt
agents/shade/vlm-classifier-agent/data/community-default/: guidelines.txt
agents/shade/vlm-classifier-agent/scripts/: deploy.sh
agents/shade/vlm-classifier-agent/src/: main.py
apps/agents/: Cargo.toml  Dockerfile
apps/agents/src/: lib.rs
apps/api/: Dockerfile  main.py  requirements.txt
apps/contracts/: Cargo.toml  README.md
apps/contracts/bounty-prediction-market/: Cargo.toml
apps/contracts/bounty-prediction-market/src/: lib.rs
apps/contracts/bounty-prediction-market/tests/: bounty_integration_tests.rs  reward_rate_edge_cases.rs  staking_tests.rs
apps/contracts/staking/: Cargo.toml
apps/contracts/staking/src/: lib.rs
apps/contracts/staking/tests/: test_basics.rs
apps/contracts/voting/: Cargo.toml
apps/contracts/voting/src/: lib.rs
apps/contracts/zkp-verifier/: Cargo.toml
apps/contracts/zkp-verifier/src/: lib.rs
apps/creation/: README.md  next.config.js  package.json
apps/creation/app/: layout.tsx  page.tsx
apps/creation/components/: NavigationClient.tsx
apps/dashboard/: .env.example  README.md  eslint.config.js  next.config.js  package.json
apps/dashboard/app/: layout.tsx  page.tsx
apps/dashboard/components/: NavigationClient.tsx
apps/docs/: README.md
apps/docs/app/: layout.tsx  page.tsx
apps/mobile/: app.json  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  index.tsx
apps/participation/: .gitignore  README.md  eslint.config.js  next.config.js  package.json  tailwind.config.ts  tsconfig.eslint.json  tsconfig.json
apps/participation/app/: layout.tsx  page.tsx
apps/participation/components/: NavigationClient.tsx
apps/participation/styles/: Home.module.css
apps/web/: eslint.config.js  next.config.js  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/components/: NavigationClient.tsx  WalletContextProvider.tsx
apps/web/src/app/: globals.css  layout.tsx
apps/web/styles/: globals.css
contracts/: Cargo.toml  DEPLOY_FRESH.sh  README.md  deploy-deposits.sh  deploy-latest.sh  deploy-now.sh
contracts/content-bounty-market/: Cargo.toml  README.md
contracts/content-bounty-market/src/: lib.rs
contracts/content-bounty-market/tests/: bounty_integration_tests.rs  participant_limit_tests.rs  staking_tests.rs
contracts/deposits/: Cargo.toml
contracts/deposits-minimal/: Cargo.toml
contracts/deposits-minimal/src/: lib.rs
contracts/deposits-simple/: Cargo.toml
contracts/deposits-simple/src/: lib.rs
contracts/deposits-test/: Cargo.toml
contracts/deposits-test/src/: lib.rs
contracts/deposits/src/: lib.rs
contracts/shade-classifier-agent/: Cargo.toml  README.md
contracts/shade-classifier-agent/src/: lib.rs
contracts/shade-curation-agent/: Cargo.toml  README.md
contracts/shade-curation-agent/src/: lib.rs
contracts/staking/: Cargo.toml
contracts/staking/src/: lib.rs
contracts/state-clearer/: Cargo.toml
contracts/state-clearer/src/: lib.rs
contracts/voting/: Cargo.toml  FINAL_SECURITY_REPORT.md  SECURITY_AUDIT.md
contracts/voting/src/: lib.rs
docs/: README.md  contracts.md  development.md
jules-scratch/verification/: verify_navbar.py
pages/: index.js
pages/api/: getEthAccount.js
scripts/: set-near-price-manual.sh
scripts/near/: deploy-voting.sh
styles/: Game.module.css
temp-turbo/: package.json
