[workspace]
resolver = "2"
members = [
    "deposits",
    "voting",
    "staking",
    "content-bounty-market",
    "shade-curation-agent",
    "shade-classifier-agent"
]

[workspace.dependencies]
near-sdk = "5.17.2"
near-contract-standards = "5.17.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "1.5"
schemars = { version = "0.8", features = ["derive"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
incremental = false
strip = "symbols"
