[package]
name = "groupweave-agents"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
base64 = "0.21"
sha2 = "0.10"
rand = "0.8"

# Phala Network dependencies
phala-types = { git = "https://github.com/Phala-Network/phala-blockchain", optional = true }
phala-node-runtime = { git = "https://github.com/Phala-Network/phala-blockchain", optional = true }

# Web3 and blockchain dependencies
web3 = "0.19"
ethers = "2.0"

[features]
default = ["phala"]
phala = ["phala-types", "phala-node-runtime"]
shade = []

[[bin]]
name = "governance-agent"
path = "src/bin/governance_agent.rs"

[[bin]]
name = "voting-aggregator"
path = "src/bin/voting_aggregator.rs"

[[bin]]
name = "reward-distributor"
path = "src/bin/reward_distributor.rs"