[workspace]
members = [
    "bounty-prediction-market"
]

[workspace.dependencies]
near-sdk = "5.17"
near-contract-standards = "5.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "1.0"
schemars = "0.8"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true