[package]
name = "dreamweave-deposits"
version = "0.1.0"
edition = "2021"
description = "Dreamweave on-chain deposit contract for NEAR payments"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { workspace = true }
near-contract-standards = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
borsh = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
