[package]
name = "shade-classifier-agent"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
borsh = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
near-sdk = { version = "5.17.2", features = ["unit-testing"] }

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "z"
lto = true
strip = "symbols"

