[package]
name = "zkp-verifier-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { workspace = true }
near-contract-standards = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
base64 = "0.21"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true